# RelXen

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: error.rs  events.rs  history.rs  lib.rs  ports.rs  service.rs
crates/app/tests/: bootstrap.rs  live_foundations.rs  live_shadow_preflight.rs  recovery.rs  trades.rs
crates/app/tests/support/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: aso.rs  lib.rs  live_intent.rs  mainnet_auto_policy.rs  models.rs  paper.rs  risk.rs  signals.rs
crates/domain/tests/: domain.rs
crates/infra/: Cargo.toml
crates/infra/src/: binance.rs  db.rs  event_bus.rs  lib.rs  live_binance.rs  metrics.rs  secrets.rs
crates/infra/tests/: sqlite_release_gate.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  router.rs
crates/server/tests/: api.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  FINAL_RC_SNAPSHOT.md  FRIEND_HANDOFF.md  LATEST_MAINNET_CANARY_REPORT.md  LATEST_TESTNET_SOAK_REPORT.md  LIVE_EXECUTION_BOUNDARY.md  LIVE_IMPLEMENTATION_PLAN.md  LIVE_READINESS.md  LIVE_RISK_CONTROLS.md  MAINNET_AUTO_LESSONS_GUIDE.md  MAINNET_AUTO_LIVE_TRIAL_PLAN.md  MAINNET_AUTO_RUNBOOK.md  MAINNET_CANARY_CHECKLIST.md  OPERATOR_HANDOFF.md  PRECISION_AND_EXCHANGE_RULES.md  PROJECT_STATE.md  RUNBOOK.md  SECRET_STORAGE_PLAN.md  TESTNET_SOAK_RUNBOOK.md  V1_RELEASE_STATUS.md
migrations/: 0001_init.sql  0002_trade_metadata.sql  0003_live_foundations.sql  0004_live_shadow_preflight.sql  0005_live_testnet_execution.sql  0006_mainnet_readiness_hardening.sql  0007_live_credential_source.sql  0008_mainnet_auto_infra.sql
scripts/: export_live_evidence.sh  export_mainnet_auto_evidence.sh  run_mainnet_auto_dry_run.sh  run_mainnet_auto_live_trial.sh  run_testnet_soak.sh  show_mainnet_auto_status.sh
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/api/: client.test.ts  client.ts
web/src/components/: ChartSection.tsx  ConnectionPanel.tsx  ControlPanel.tsx  Header.tsx  LiveAccessPanel.tsx  LogPanel.tsx  Panel.tsx  PerformancePanel.tsx  PositionPanel.tsx  RiskPanel.tsx  SafetyStatusBar.tsx  SystemPanel.tsx  ToastViewport.tsx  TradeHistoryPanel.tsx  WalletPanel.tsx  liveAccess.test.tsx  releaseGate.test.tsx
web/src/hooks/: useEventStream.test.ts  useEventStream.ts
web/src/lib/: commandFeedback.test.ts  commandFeedback.ts  connection.test.ts  connection.ts  errors.ts  format.ts
web/src/store/: appStore.test.ts  appStore.ts
web/src/test/: helpers.tsx
