[package]
name = "relxen-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
dotenvy.workspace = true
futures.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

relxen-app = { path = "../app" }
relxen-domain = { path = "../domain" }
relxen-infra = { path = "../infra" }

[dev-dependencies]
tokio-tungstenite.workspace = true
